--- a/services.html
+++ b/services.html
@@ -855,7 +855,7 @@
     <footer class="footer-area">
       <div class="container">
         <div class="text text-center">
-          <p>@ StriveFolio 2024, Design By <a href="#">StiveSttudios<sup>&reg;</sup></a></p>
+          <p>@ StriveFolio 2024, Design By <a href="#">Stive Studios<sup>&reg;</sup></a></p>
         </div>
       </div>
     </footer>
